feat: creating the route responsible for listing all films that were released in a given year
